Added the title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="header">Etch A Sketch</div>
     <div class="buttons">
         <button id="size-btn">Change Size</button>
         <button id="reset-btn">Reset</button>
